tests/ui/rfcs/rfc-2091-track-caller/error-with-invalid-abi.stderr
error[E0737]: `#[track_caller]` can only be used with the Rust ABI
  --> $DIR/error-with-invalid-abi.rs:1:1
   |
LL | #[track_caller]
   | ^^^^^^^^^^^^^^^ using `#[track_caller]` here
LL |
LL | extern "C" fn c_fn() {}
   | ---------- not using the Rust ABI because of this

error[E0737]: `#[track_caller]` can only be used with the Rust ABI
  --> $DIR/error-with-invalid-abi.rs:9:5
   |
LL | extern "C" {
   | ---------- not using the Rust ABI because of this
LL |     #[track_caller]
   |     ^^^^^^^^^^^^^^^ using `#[track_caller]` here

error[E0737]: `#[track_caller]` can only be used with the Rust ABI
  --> $DIR/error-with-invalid-abi.rs:22:5
   |
LL |     #[track_caller]
   |     ^^^^^^^^^^^^^^^ using `#[track_caller]` here
LL |
LL |     extern "C" fn c_method() {}
   |     ---------- not using the Rust ABI because of this

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0737`.
